--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -179,18 +179,18 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 |FT-CRD |$\mu+\tau_{i}+ε_{ij}-\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n$|$=\mu+\tau_{i}+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^nε_{ij}}n$|$=$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
 |RT-CRD | | | | |
 |FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-0-\frac{ \sum_{j=1}^bε_{ij}}b$|$=\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
-|RB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac1b \sum_{j=1}^b\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
-
-|$y_{ij}-\bar y_{.j}$||||
-| ---                |   ---  |---|---|
-|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-0-\beta_j-\frac{ \sum_{i=1}^aε_{ij}}a$|$=\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a$|
-|RB-RCBD| | | |
+|RB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac{ \sum_{j=1}^b\beta_j}b+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
 
 |$\bar y_{i.}-\bar y_{..}$||||
 | ---                |   ---  |---|---|
 |FT-CRD |$\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n-\frac{\sum_{i=1}^a\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}{an}$|$=\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
-|RT-CRD | |$=\tau_{i}-\frac1{a}\sum_{i=1}^a\tau_{i}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
-|FB-RCBD|$\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\tau_{i}+$|$\frac1b\sum_{j=1}^bε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}$
+|RT-CRD | |$=\tau_{i}-\frac{\sum_{i=1}^a\tau_{i}}{a}+$|$\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}$
+|FB-RCBD|$\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\tau_{i}+$|$\frac{\sum_{j=1}^bε_{ij}}b-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
+|RB-RCBD| | | |
+
+|$y_{ij}-\bar y_{.j}$||||
+| ---                |   ---  |---|---|
+|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-0-\beta_j-\frac{ \sum_{i=1}^aε_{ij}}a$|$=\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a$|
 |RB-RCBD| | | |
 
 |$\bar y_{.j}-\bar y_{..}$||||
@@ -198,7 +198,7 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 |FB-RCBD|$\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=\beta_j+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
 |RB-RCBD| |$=\beta_j-\frac{\sum_{j=1}^b\beta_j}{b}+$|$\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$|
 
-|$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}$||||
+||$y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}$|||
 | ---   |   ---  |---|---|
 |FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{i=1}^a(\mu+\tau_{i}+\beta_j+ε_{ij})}a-\frac {\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b+\frac{\sum_{i=1}^a\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}{ab}$|$=ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{j=1}^bε_{ij}}b+\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}$
 
@@ -212,18 +212,16 @@ E[\beta_j]+E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
 E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{RB-RCBD}
 \end{cases}$$
 
-$$E[y_{ij}-\bar y_{.j}]=\begin{cases}
-E[\tau_{i}]+E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
-E[\tau_{i}]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
-\end{cases}$$
-
 $$E[\bar y_{i.}-\bar y_{..}]=\begin{cases}E[\tau_{i}]+\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{FT-CRD}\\
 E[\tau_{i}]-\frac1{a}\sum_{i=1}^aE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{RT-CRD}\\
 E[\tau_{i}]+\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
 E[\tau_{i}]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
 \end{cases}$$
 
-
+$$E[y_{ij}-\bar y_{.j}]=\begin{cases}
+E[\tau_{i}]+E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
+E[\tau_{i}]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
+\end{cases}$$
 
 $$E[\bar y_{.j}-\bar y_{..}]=\begin{cases}
 E[\beta_j]+\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
@@ -237,69 +235,81 @@ $$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{a}\sum_{i=1}^a
 
 $Var[y_{ij}-\bar y_{i.}]=$
 
-|$Var[y_{ij}-\bar y_{i.}]$||||
-| ---   |   ---  |---|---|
-|FT-CRD |$Var[ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|$\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2$
-|RT-CRD | | | |
-|FB-RCBD|$Var[\beta_{j}+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[\beta_{j}]+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|
-|RB-RCBD|$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}b+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]$|$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[\sum_{j=1}^b\beta_{j},ε_{ij}]}b+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]}{b^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$|
+FT-CRD;RT-CRD
 
+$Var[ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]=$,
+$Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$,
+$=\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2$
 
-$Var[ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$
+FB-RCBD
 
-$Var[\tau_{i}-\frac1n \sum_{j=1}^n\tau_{i}+ε_{ij}-\frac1n \sum_{j=1}^nε_{ij}]=Var[\tau_{i}]+\frac1{n^2}\sum_{j=1}^nVar[\tau_{i}]-\frac2nCov[\tau_{i},\sum_{j=1}^n\tau_{i}]+Var[ε_{ij}]+\frac1{n^2}\sum_{j=1}^nVar[ε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]$
+$Var[\beta_{j}+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]=$,
+$Var[\beta_{j}]+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$,
+$=\sigma_{\beta}^2+\sigma^2+\frac{\sigma^2}n-\frac{2\sigma^2}n=\sigma_{\beta}^2+\frac{(n-1)\sigma^2}n$
 
-$+Cov[\tau_{i},ε_{ij}]-\frac2nCov[\tau_{i},\sum_{j=1}^nε_{ij}]-\frac2nCov[ε_{ij},\sum_{j=1}^n\tau_{i}]+\frac2{n^2}Cov[\sum_{j=1}^n\tau_{i},\sum_{j=1}^nε_{ij}]\quad\text{RT-CRD}$
+RB-RCBD
 
-$Var[ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}]=Var[ε_{ij}]+\frac1{b^2}\sum_{j=1}^bVar[ε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^bε_{ij}]\quad\text{FB-RCBD}$
-
-$Var[\beta_{j}-\frac1b \sum_{j=1}^b\beta_{j}+ε_{ij}-\frac1b \sum_{j=1}^bε_{ij}]=Var[\beta_{j}]+\frac1{b^2}\sum_{j=1}^bVar[\beta_{j}]-\frac2bCov[\beta_{j},\sum_{j=1}^b\beta_{j}]+Var[ε_{ij}]+\frac1{b^2}\sum_{j=1}^bVar[ε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^bε_{ij}]$
-
-$+Cov[\beta_{j},ε_{ij}]-\frac2bCov[\beta_{j},\sum_{j=1}^bε_{ij}]-\frac2bCov[ε_{ij},\sum_{j=1}^b\beta_{j}]+\frac2{b^2}Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]\quad\text{RB-RCBD}$
+$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}b+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]=$,
+$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[\sum_{j=1}^b\beta_{j},ε_{ij}]}b+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]}{b^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$,
+$=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{b}-\frac{2\sigma_{\beta}^2}{b}+\sigma^2+\frac{\sigma^2}n-\frac{2\sigma^2}n=\frac{(\sigma_{\beta}^2+\sigma^2)(n-1)}n$
 
  ---
 
 $Var[\bar y_{i.}-\bar y_{..}]=$
 
-4
+FT-CRD
 
-$$Var[\frac1n\sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=\frac1nVar[ε_{ij}]+\frac1{a^2n^2}\sum_{i=1}^a\sum_{j=1}^nVar[ε_{ij}]-\frac2{an^2}Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]\quad \text{FT-CRD}$$
+$Var[\tau_{i}+\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}]=$,
+$Var[\tau_{i}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}+\frac{\sum_{i=1}^a\sum_{j=1}^nVar[ε_{ij}]}{a^2n^2}+\frac{2Cov[\tau_{i},\sum_{j=1}^nε_{ij}]}{n}-\frac{2Cov[\tau_{i},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]}{an}-\frac{2Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]}{an^2}$,
+$=\sigma_{\tau}^2+\frac{\sigma_{\tau}^2}{n}+\frac{\sigma^2}{an}-\frac{2\sigma^2}{an}=\frac{(n+1)\sigma_{\tau}^2}{n}-\frac{\sigma^2}{an}$
 
-5
+RT-CRD
 
-$Var[\frac1n \sum_{j=1}^n\tau_{i}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^n\tau_{i}+\frac1n \sum_{j=1}^nε_{ij}-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nε_{ij}]=\quad \text{RT-CRD}$
+$Var[\tau_{i}-\frac{\sum_{i=1}^a\tau_{i}}{a}+\frac{\sum_{j=1}^nε_{ij}}n-\frac{\sum_{i=1}^a\sum_{j=1}^nε_{ij}}{an}]=$,
+$Var[\tau_{i}]+\frac{\sum_{i=1}^aVar[\tau_{i}]}{a^2}+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}+\frac{\sum_{i=1}^a\sum_{j=1}^nVar[ε_{ij}]}{a^2n^2}-\frac{2Cov[\tau_{i},\sum_{i=1}^a\tau_{i}]}a+\frac{2Cov[\tau_{i},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[\tau_{i},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]}{an}-\frac{2Cov[\sum_{i=1}^a\tau_{i},\sum_{j=1}^nε_{ij}]}{an}+\frac{2Cov[\sum_{i=1}^a\tau_{i},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]}{a^2n}-\frac{2Cov[\sum_{j=1}^nε_{ij},\sum_{i=1}^a\sum_{j=1}^nε_{ij}]}{an^2}$,
+$=\sigma_{\tau}^2+\frac{\sigma_{\tau}^2}{a}-\frac{2\sigma_{\tau}^2}{a}+\frac{\sigma^2}{n}+\frac{\sigma^2}{an}-\frac{2\sigma^2}{an}=\frac{(n\sigma_{\tau}^2+\sigma^2)(n-1)}{an}$
 
-6
+FB-RCBD;RB-RCBD
 
-$$Var[]=\quad \text{FB-RCBD}$$
+$Var[\tau_{i}+\frac{\sum_{j=1}^bε_{ij}}b-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}]=$,
+$Var[\tau_{i}]+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}+\frac{2Cov[\tau_{i},\sum_{j=1}^bε_{ij}]}{b}-\frac{2Cov[\tau_{i},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}$,
+$=\sigma_{\tau}^2+\frac{\sigma_{\tau}^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(b+1)\sigma_{\tau}^2}{b}-\frac{\sigma^2}{ab}$
 
  ---
 
-6
-
 $Var[y_{ij}-\bar y_{.j}]=$
 
-$$Var[]=\quad \text{FB-RCBD}$$
+FB-RCBD;RB-RCBD
+
+$$Var[\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a]=$$
+$Var[\tau_{i}]+Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}-\frac{2Cov[\tau_{i},ε_{ij}]}a-\frac{2Cov[\tau_{i},\sum_{i=1}^aε_{ij}]}a-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}a$,
+$=\sigma_{\tau}^2+\sigma^2+\frac{\sigma^2}a-\frac{2\sigma^2}a=\sigma_{\tau}^2+\frac{(a-1)\sigma^2}a$
 
  ---
 
 $Var[\bar y_{.j}-\bar y_{..}]=$
 
-6
+FB-RCBD
 
-$$Var[\frac1a\sum_{j=1}^aε_{ij}-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=\frac1aVar[ε_{ij}]+\frac1{a^2b^2}\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]-\frac2{ab^2}Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]\quad \text{FB-RCBD}$$
+$Var[\beta_{j}+\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}]=$,
+$Var[\beta_{j}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}+\frac{2Cov[\beta_{j},\sum_{i=1}^aε_{ij}]}{a}-\frac{2Cov[\beta_{j},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}$,
 
-7
+$=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{a}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(a+1)\sigma_{\beta}^2}{a}-\frac{\sigma^2}{ab}$
 
-$$Var[]=\quad \text{RB-RCBD}$$
+RB-RCBD
+
+$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}{b}+\frac{\sum_{i=1}^aε_{ij}}a-\frac{\sum_{i=1}^a\sum_{j=1}^bε_{ij}}{ab}]=$,
+$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+\frac{2Cov[\beta_{j},\sum_{i=1}^aε_{ij}]}a-\frac{2Cov[\beta_{j},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{i=1}^aε_{ij}]}{ab}+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}$,
+$=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{b}-\frac{2\sigma_{\beta}^2}{b}+\frac{\sigma^2}{a}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(a\sigma_{\beta}^2+\sigma^2)(b-1)}{ab}$
 
  ---
 
-6
+FB-RCBD
 
-$Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}-\frac1a\sum_{i=1}^a\tau_{i}-\frac1b\sum_{j=1}^b\beta_{j}]\quad\text{FB-RCBD}$
-
-
+$$Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=$$,
+$$Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=$$
+$$Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}{a}-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}{b}+\frac{2Cov[ε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}+\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}-\frac{2Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}$$
+$$=\sigma^2+\frac{\sigma^2}{a}+\frac{\sigma^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{a}-\frac{2\sigma^2}{b}+\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(ab-a-b-3)\sigma^2}{ab}$$
 
 
 
