--- a/static/stat565/temp_stat565.Rmd
+++ b/static/stat565/temp_stat565.Rmd
@@ -281,7 +281,7 @@ $Var[y_{ij}-\bar y_{.j}]=$
 
 FB-RCBD;RB-RCBD
 
-$$Var[\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a]=$$
+$Var[\tau_{i}+ε_{ij}-\frac{\sum_{i=1}^aε_{ij}}a]=$,
 $Var[\tau_{i}]+Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}-\frac{2Cov[\tau_{i},ε_{ij}]}a-\frac{2Cov[\tau_{i},\sum_{i=1}^aε_{ij}]}a-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}a$,
 $=\sigma_{\tau}^2+\sigma^2+\frac{\sigma^2}a-\frac{2\sigma^2}a=\sigma_{\tau}^2+\frac{(a-1)\sigma^2}a$
 
@@ -306,10 +306,10 @@ $=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{b}-\frac{2\sigma_{\beta}^2}{b}+\frac{
 
 FB-RCBD
 
-$$Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=$$,
-$$Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=$$
-$$Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}{a}-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}{b}+\frac{2Cov[ε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}+\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}-\frac{2Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}$$
-$$=\sigma^2+\frac{\sigma^2}{a}+\frac{\sigma^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{a}-\frac{2\sigma^2}{b}+\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(ab-a-b-3)\sigma^2}{ab}$$
+$Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=$,
+$Var[ε_{ij}-\frac1a\sum_{i=1}^aε_{ij}-\frac1b\sum_{j=1}^bε_{ij}+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bε_{ij}]=$
+$Var[ε_{ij}]+\frac{\sum_{i=1}^aVar[ε_{ij}]}{a^2}+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}+\frac{\sum_{i=1}^a\sum_{j=1}^bVar[ε_{ij}]}{a^2b^2}-\frac{2Cov[ε_{ij},\sum_{i=1}^aε_{ij}]}{a}-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}{b}+\frac{2Cov[ε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab}+\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{j=1}^bε_{ij}]}{ab}-\frac{2Cov[\sum_{i=1}^aε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{a^2b}-\frac{2Cov[\sum_{j=1}^bε_{ij},\sum_{i=1}^a\sum_{j=1}^bε_{ij}]}{ab^2}$
+$=\sigma^2+\frac{\sigma^2}{a}+\frac{\sigma^2}{b}+\frac{\sigma^2}{ab}-\frac{2\sigma^2}{a}-\frac{2\sigma^2}{b}+\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}-\frac{2\sigma^2}{ab}=\frac{(ab-a-b-3)\sigma^2}{ab}$
 
 
 
@@ -326,10 +326,10 @@ For $ε_{ij},\tau_{i},\beta_{j}$ are independent, $Cov[ε_{ij},\tau_{i}]=Cov[ε_
 
 $-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]=-\frac2nCov[ε_{ij},(ε_{i1}+..+ε_{ij}..+ε_{in})]=-\frac2n(Cov[ε_{ij},ε_{i1}]+..+Cov[ε_{ij},ε_{ij}]..+Cov[ε_{ij},ε_{in}])=-\frac2n\sigma^2$
 
-$$Var[y_{ij}-\bar y_{i.}]=\begin{cases}\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2&\text{FT-CRD}\\
-σ_{\tau}^2+\frac{σ_{\tau}^2}n-\frac2nσ_{\tau}^2+\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n(σ_{\tau}^2+\sigma^2)&\text{RT-CRD}\\
-\sigma^2+\frac{\sigma^2}b-\frac2b\sigma^2=\frac{b-1}b\sigma^2&\text{FB-RCBD}\\
-σ_{\beta}^2+\frac{σ_{\beta}^2}b-\frac2bσ_{\beta}^2+\sigma^2+\frac{\sigma^2}b-\frac2b\sigma^2=\frac{b-1}b(σ_{\beta}^2+\sigma^2)&\text{RB-RCBD}
+$$Var[y_{ij}-\bar y_{i.}]=\begin{cases}\frac{n-1}n\sigma^2&\text{FT-CRD}\\
+\frac{n-1}n(σ_{\tau}^2+\sigma^2)&\text{RT-CRD}\\
+\frac{b-1}b\sigma^2&\text{FB-RCBD}\\
+\frac{b-1}b(σ_{\beta}^2+\sigma^2)&\text{RB-RCBD}
 \end{cases}$$
 
 $$Var[\bar y_{i.}-\bar y_{..}]=\begin{cases}\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2&\text{FT-CRD}\\
