--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -178,8 +178,8 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 | ---                |   ---  |---|---|   ---  |
 |FT-CRD |$\mu+\tau_{i}+ε_{ij}-\frac{\sum_{j=1}^n(\mu+\tau_{i}+ε_{ij})}n$|$=\mu+\tau_{i}+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^nε_{ij}}n$|$=$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
 |RT-CRD | | | | |
-|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-0-\frac{ \sum_{j=1}^bε_{ij}}b$|$=\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
-|RB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac{ \sum_{j=1}^b\beta_j}b+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n$
+|FB-RCBD|$\mu+\tau_{i}+\beta_j+ε_{ij}-\frac{\sum_{j=1}^b(\mu+\tau_{i}+\beta_j+ε_{ij})}b$|$=\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-0-\frac{ \sum_{j=1}^bε_{ij}}b$|$=\beta_j+$|$ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}b$
+|RB-RCBD| |$\mu+\tau_{i}+\beta_j+ε_{ij}-\mu-\tau_{i}-\frac{\sum_{j=1}^b\beta_j}b -\frac{\sum_{j=1}^bε_{ij}}b$|$=\beta_j-\frac{ \sum_{j=1}^b\beta_j}b+$|$ε_{ij}-\frac{\sum_{j=1}^bε_{ij}}n$
 
 |$\bar y_{i.}-\bar y_{..}$||||
 | ---                |   ---  |---|---|
@@ -243,15 +243,15 @@ $=\sigma^2+\frac{\sigma^2}n-\frac2n\sigma^2=\frac{n-1}n\sigma^2$
 
 FB-RCBD
 
-$Var[\beta_{j}+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]=$,
-$Var[\beta_{j}]+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$,
-$=\sigma_{\beta}^2+\sigma^2+\frac{\sigma^2}n-\frac{2\sigma^2}n=\sigma_{\beta}^2+\frac{(n-1)\sigma^2}n$
+$Var[\beta_{j}+ε_{ij}-\frac{\sum_{j=1}^bε_{ij}}b]=$,
+$Var[\beta_{j}]+Var[ε_{ij}]+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}-2Cov[\beta_{j},ε_{ij}]-\frac{2Cov[\beta_{j},\sum_{j=1}^bε_{ij}]}b-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}b$,
+$=\sigma_{\beta}^2+\sigma^2+\frac{\sigma^2}b-\frac{2\sigma^2}b=\sigma_{\beta}^2+\frac{(b-1)\sigma^2}b$
 
 RB-RCBD
 
-$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}b+ε_{ij}-\frac{\sum_{j=1}^nε_{ij}}n]=$,
-$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+Var[ε_{ij}]+\frac{\sum_{j=1}^nVar[ε_{ij}]}{n^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+\frac{2Cov[\beta_{j},ε_{ij}]}n-\frac{2Cov[\beta_{j},\sum_{j=1}^nε_{ij}]}n-\frac{2Cov[\sum_{j=1}^b\beta_{j},ε_{ij}]}b+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]}{b^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^nε_{ij}]}n$,
-$=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{b}-\frac{2\sigma_{\beta}^2}{b}+\sigma^2+\frac{\sigma^2}n-\frac{2\sigma^2}n=\frac{(\sigma_{\beta}^2+\sigma^2)(n-1)}n$
+$Var[\beta_{j}-\frac{\sum_{j=1}^b\beta_{j}}b+ε_{ij}-\frac{\sum_{j=1}^bε_{ij}}b]=$,
+$Var[\beta_{j}]+\frac{\sum_{j=1}^bVar[\beta_{j}]}{b^2}+Var[ε_{ij}]+\frac{\sum_{j=1}^bVar[ε_{ij}]}{b^2}-\frac{2Cov[\beta_{j},\sum_{j=1}^b\beta_{j}]}b+2Cov[\beta_{j},ε_{ij}]-\frac{2Cov[\beta_{j},\sum_{j=1}^bε_{ij}]}b-\frac{2Cov[\sum_{j=1}^b\beta_{j},ε_{ij}]}b+\frac{2Cov[\sum_{j=1}^b\beta_{j},\sum_{j=1}^bε_{ij}]}{b^2}-\frac{2Cov[ε_{ij},\sum_{j=1}^bε_{ij}]}b$,
+$=\sigma_{\beta}^2+\frac{\sigma_{\beta}^2}{b}-\frac{2\sigma_{\beta}^2}{b}+\sigma^2+\frac{\sigma^2}b-\frac{2\sigma^2}b=\frac{(\sigma_{\beta}^2+\sigma^2)(b-1)}b$
 
  ---
 
