--- a/docs/stat565/temp_stat565.Rmd
+++ b/docs/stat565/temp_stat565.Rmd
@@ -206,17 +206,18 @@ For a random Block effects RCBD, $\mu$and $\tau_i$ are constants, $E[\beta_j]=0$
 
 For $ε_{ij}\sim iid\ N(0,σ^2)$, $E[ε_{ij}]=0$
 
-$$E[y_{ij}-\bar y_{i.}]=\begin{cases}E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]=0&\text{FT-CRD}\\
-E[ε_{ij}]-\frac1n \sum_{j=1}^nE[ε_{ij}]=0&\text{RT-CRD}\\
-E[\beta_j]+E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
-E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{RB-RCBD}
-\end{cases}$$
+|$E[y_{ij}-\bar y_{i.}]$|$=$|$E[\bar y_{i.}-\bar y_{..}]$|$=$|
+| ---                   |   ---  |---|---|
+|FT-CRD |$E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]$|$0$|$E[\tau_{i}]+\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]$|$\tau_{i}$
+|RT-CRD |$E[ε_{ij}]-\frac1{n}\sum_{j=1}^nE[ε_{ij}]$|$0$|$E[\tau_{i}]-\frac1{a}\sum_{i=1}^aE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]$|$0$|
+|FB-RCBD|$E[\beta_j]+E[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]$|$\beta_j$|$E[\tau_{i}]+\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]$|$\tau_{i}$|
+|RB-RCBD|$E[\beta_j]-\frac1b \sum_{j=1}^bE[\beta_j]+E[ε_{ij}]-\frac1b \sum_{j=1}^bE[ε_{ij}]$|$0$|$E[\tau_{i}]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]$|$\tau_{i}$|
 
-$$E[\bar y_{i.}-\bar y_{..}]=\begin{cases}E[\tau_{i}]+\frac1{n}\sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{FT-CRD}\\
-E[\tau_{i}]-\frac1{a}\sum_{i=1}^aE[\tau_{i}]+\frac1n \sum_{j=1}^nE[ε_{ij}]-\frac1{an}\sum_{i=1}^a\sum_{j=1}^nE[ε_{ij}]=\tau_{i}&\text{RT-CRD}\\
-E[\tau_{i}]+\frac1{b}\sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
-E[\tau_{i}]+\frac1b \sum_{j=1}^bE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
-\end{cases}$$
+|$E[y_{ij}-\bar y_{.j}]$|$=$|$E[\bar y_{.j}-\bar y_{..}]$|$=$|
+| ---                   |   ---  |---|---|
+|FB-RCBD|$E[\tau_{i}]+E[ε_{ij}]-\frac1{a}\sum_{i=1}^aE[ε_{ij}]$|$\tau_{i}$|$E[\beta_j]+\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]$|$\beta_j$|
+|RB-RCBD|$E[\tau_{i}]+E[ε_{ij}]-\frac1a \sum_{i=1}^aE[ε_{ij}]$|$\tau_{i}$|$E[\beta_j]-\frac1{a}\sum_{i=1}^aE[\beta_j]+\frac1a \sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]$|$0$|
+
 
 $$E[y_{ij}-\bar y_{.j}]=\begin{cases}
 E[\tau_{i}]+E[ε_{ij}]-\frac1{a}\sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{FB-RCBD}\\
@@ -225,11 +226,10 @@ E[\tau_{i}]+E[ε_{ij}]-\frac1a \sum_{j=1}^aE[ε_{ij}]=\tau_{i}&\text{RB-RCBD}
 
 $$E[\bar y_{.j}-\bar y_{..}]=\begin{cases}
 E[\beta_j]+\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{FB-RCBD}\\
-E[\beta_j]-\frac1{a}\sum_{i=1}^aE[\beta_j]+\frac1a \sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=\beta_j&\text{RB-RCBD}
+E[\beta_j]-\frac1{a}\sum_{i=1}^aE[\beta_j]+\frac1a \sum_{i=1}^aE[ε_{ij}]-\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0&\text{RB-RCBD}
 \end{cases}$$
 
-
-$$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0\quad \text{FB-RCBD}$$
+FB-RCBD,$E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]=E[ε_{ij}]-\frac1{a}\sum_{i=1}^aE[ε_{ij}]-\frac1{b}\sum_{j=1}^bE[ε_{ij}]+\frac1{ab}\sum_{i=1}^a\sum_{j=1}^bE[ε_{ij}]=0$
 
  ---
 
@@ -332,24 +332,24 @@ $-\frac2nCov[ε_{ij},\sum_{j=1}^nε_{ij}]=-\frac2nCov[ε_{ij},(ε_{i1}+..+ε_{ij
 |FT-CRD |$\frac{n-1}n\sigma^2$| $+0=$ |$\frac{n-1}n\sigma^2$|
 |RT-CRD |$\frac{n-1}n\sigma^2$| $+0=$ |$\frac{n-1}n\sigma^2$|
 |FB-RCBD|$\frac{(b-1)\sigma^2}b$  |$+\beta_{j}^2=$|$\frac{(b-1)\sigma^2}b+\beta_{j}^2$|
-|RB-RCBD|$\frac{(b-1)(\sigma_{\beta}^2+\sigma^2)}b$|$+0=$|$\frac{(\sigma_{\beta}^2+\sigma^2)(b-1)}b$|
+|RB-RCBD|$\frac{(b-1)(\sigma_{\beta}^2+\sigma^2)}b$|$+0=$|$\frac{(b-1)(\sigma_{\beta}^2+\sigma^2)}b$|
 
 |$E[(\bar y_{i.}-\bar y_{..})^2]$|$=Var[\bar y_{i.}-\bar y_{..}]$|$+E[\bar y_{i.}-\bar y_{..}]^2$|$=$|
 | ---   |   ---               |---|---|
-|FT-CRD |$\frac{(n+1)\sigma_{\tau}^2}{n}-\frac{\sigma^2}{an}$| $+\tau_i=$ |$\frac{(n+1)\sigma_{\tau}^2}{n}-\frac{\sigma^2}{an}+\tau_i$|
-|RT-CRD |$\frac{(n\sigma_{\tau}^2+\sigma^2)(n-1)}{an}$| $+\tau_i=$ |$\frac{(n\sigma_{\tau}^2+\sigma^2)(n-1)}{an}+\tau_i$|
-|FB-RCBD|$\frac{(b+1)\sigma_{\tau}^2}{b}-\frac{\sigma^2}{ab}$|$+\tau_i^2=$|$\frac{(a-1)\sigma^2}{ab}+\tau_i^2$|
-|RB-RCBD|$\frac{(b+1)\sigma_{\tau}^2}{b}-\frac{\sigma^2}{ab}$|$+\tau_i=$|$\frac{(b+1)\sigma_{\tau}^2}{b}-\frac{\sigma^2}{ab}+\tau_i$|
+|FT-CRD |$\frac{(n+1)\sigma_{\tau}^2}{n}-\frac{\sigma^2}{an}$| $+\tau_i^2=$ |$\frac{(a-1)\sigma^2}{an}+\tau_i^2$|
+|RT-CRD |$\frac{(n\sigma_{\tau}^2+\sigma^2)(n-1)}{an}$| $+0=$ |$\frac{(n-1)(n\sigma_{\tau}^2+\sigma^2)}{an}$|
+|FB-RCBD|$\frac{(a-1)\sigma^2}{ab}$|$+\tau_i^2=$|$\frac{(a-1)\sigma^2}{ab}+\tau_i^2$|
+|RB-RCBD|$\frac{(a-1)\sigma^2}{ab}$|$+\tau_i^2=$|$\frac{(a-1)\sigma^2}{ab}+\tau_i^2$|
 
 |$E[(y_{ij}-\bar y_{.j})^2]$|$=Var[y_{ij}-\bar y_{.j}]$|$+E[y_{ij}-\bar y_{.j}]^2$|$=$|
 | ---   |   ---               |---|---|
-|FB-RCBD|$\sigma_{\tau}^2+\frac{(a-1)\sigma^2}a$|$+\tau_i=$|$\frac{(a-1)\sigma^2}a$|
-|RB-RCBD|$\sigma_{\tau}^2+\frac{(a-1)\sigma^2}a$|$+\tau_i=$|$\sigma_{\tau}^2+\frac{(a-1)\sigma^2}a+\tau_i$|
+|FB-RCBD|$\frac{(a-1)\sigma^2}a$|$+\tau_i=$|$\frac{(a-1)\sigma^2}a+\tau_i^2$|
+|RB-RCBD|$\frac{(a-1)\sigma^2}a$|$+\tau_i=$|$\frac{(a-1)\sigma^2}a+\tau_i^2$|
 
 |$E[(\bar y_{.j}-\bar y_{..})^2]$|$=Var[\bar y_{.j}-\bar y_{..}]$|$+E[\bar y_{.j}-\bar y_{..}]^2$|$=$|
 | ---   |   ---               |---|---|
-|FB-RCBD|$\frac{(a+1)\sigma_{\beta}^2}{a}-\frac{\sigma^2}{ab}$|$+\beta_{j}^2=$|$\frac{(b-1)\sigma^2}{ab}+\beta_{j}^2$|
-|RB-RCBD|$\frac{(a+1)\sigma_{\beta}^2}{a}-\frac{\sigma^2}{ab}$|$+=$|$\frac{(b-1)(a\sigma_{\beta}^2+\sigma^2)}{ab}$|
+|FB-RCBD|$\frac{(b-1)\sigma^2}{ab}+\beta_{j}^2$|$+\beta_{j}^2=$|$\frac{(b-1)\sigma^2}{ab}+\beta_{j}^2$|
+|RB-RCBD|$\frac{(b-1)(a\sigma_{\beta}^2+\sigma^2)}{ab}$|$+0=$|$\frac{(b-1)(a\sigma_{\beta}^2+\sigma^2)}{ab}$|
 
 |$E[(y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..})^2]$|$=Var[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]$|$+E[y_{ij}-\bar y_{i.}-\bar y_{.j}+\bar y_{..}]^2$|$=$|
 | ---   |   ---               |---|---|
